--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -3,13 +3,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".assistant.AssistantDrawerUI">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:id="@+id/drawer"
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@android:color/white"
@@ -34,7 +35,9 @@
             <TextView
                 android:id="@+id/drawerWelcomeTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="italic" />
+
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -42,51 +45,58 @@
 
             <ImageView
                 android:id="@+id/closeAssistantImageView"
-                android:layout_width="21dp"
-                android:layout_height="20dp"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/bodyLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="60dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/assistantStateTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/spokenTextView"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="4dp"
+                android:padding="8dp"
                 android:textColor="#ffffff"
-                android:textSize="12sp"
-                android:layout_marginTop="4dp"/>
+                android:textSize="12sp" />
 
         </LinearLayout>
 
         <ImageView
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="5dp"
-            android:src="@drawable/dotted_line"
-            android:layerType="software" />
+            android:layout_marginTop="20dp"
+            android:layerType="software"
+            android:src="@drawable/dotted_line" />
 
         <LinearLayout
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/speakLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/speakTextView"
                     android:layout_width="wrap_content"
@@ -98,14 +108,15 @@
                 <ImageView
                     android:id="@+id/micImageView"
                     android:layout_width="40dp"
-                    android:layout_height="38dp"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_height="40dp"
+                    android:layout_marginTop="12dp" />
             </LinearLayout>
+
             <LinearLayout
-                android:layout_marginLeft="26dp"
                 android:id="@+id/typeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -115,21 +126,25 @@
                     android:text="TYPE"
                     android:textColor="#3E77A5"
                     android:textSize="12sp" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="12dp">
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal">
+
                     <EditText
                         android:id="@+id/inputTextMessage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:inputType="textPersonName" />
+
                     <ImageView
                         android:id="@+id/sendMessageButtonImageView"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"/>
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
