--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -103,13 +103,16 @@
                     android:layout_height="wrap_content"
                     android:text="@string/speak"
                     android:textColor="#3E77A5"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
 
-                <ImageView
-                    android:id="@+id/micImageView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="12dp" />
+                    <ImageView
+                        android:id="@+id/micImageView"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:padding="4dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_gravity="center"/>
             </LinearLayout>
 
             <LinearLayout
