--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -15,9 +15,7 @@
         android:layout_height="300dp"
         android:background="@android:color/white"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
         android:paddingTop="16dp"
-        android:paddingRight="16dp"
         android:paddingBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,13 +23,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
-
         <LinearLayout
             android:id="@+id/headerLayout"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/assistantAvatarImageView"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/assistantNameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginLeft="8dp">
+
+            </TextView>
             <TextView
                 android:id="@+id/drawerWelcomeTextView"
                 android:layout_width="wrap_content"
@@ -55,103 +68,121 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1" />
-
         <LinearLayout
             android:id="@+id/bodyLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/assistantStateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/spokenTextView"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="4dp"
-                android:padding="8dp"
-                android:textColor="#ffffff"
-                android:textSize="12sp" />
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_weight="1">
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/dashedLineImageView"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_marginTop="20dp"
-            android:layerType="software"
-            android:src="@drawable/dotted_line" />
-
         <LinearLayout
-            android:id="@+id/footerLayout"
+            android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
             <LinearLayout
-                android:id="@+id/speakLayout"
-                android:layout_width="wrap_content"
+                android:id="@+id/drawerBodyLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/speakTextView"
+                    android:id="@+id/assistantStateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/speak"
-                    android:textColor="#3E77A5"
-                    android:textSize="12sp"
-                    android:layout_gravity="center"/>
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/spokenTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="4dp"
+                    android:padding="8dp"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/dashedLineImageView"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_marginTop="20dp"
+                android:layerType="software"
+                android:src="@drawable/dotted_line" />
+
+            <LinearLayout
+                android:id="@+id/drawerFooterLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/speakLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/speakTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/speak"
+                        android:textColor="#3E77A5"
+                        android:textSize="12sp" />
 
                     <ImageView
                         android:id="@+id/micImageView"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:padding="4dp"
+                        android:layout_gravity="center"
                         android:layout_marginTop="12dp"
-                        android:layout_gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/typeLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/typeTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TYPE"
-                    android:textColor="#3E77A5"
-                    android:textSize="12sp" />
+                        android:padding="4dp" />
+                </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/sendTextLayout"
+                    android:id="@+id/typeLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:orientation="horizontal">
+                    android:layout_marginLeft="16dp"
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/inputTextMessage"
-                        android:layout_width="0dp"
+                    <TextView
+                        android:id="@+id/typeTextView"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:inputType="textPersonName" />
+                        android:text="TYPE"
+                        android:textColor="#3E77A5"
+                        android:textSize="12sp" />
 
-                    <ImageView
-                        android:id="@+id/sendMessageButtonImageView"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center" />
+                    <LinearLayout
+                        android:id="@+id/sendTextLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/inputTextMessage"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:inputType="textPersonName" />
+
+                        <ImageView
+                            android:id="@+id/sendMessageButtonImageView"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_gravity="center" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
