more styling fixes

--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -29,6 +29,7 @@
             android:paddingRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingVertical="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -74,6 +75,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="gone"
+            android:paddingHorizontal="12dp"
             android:layout_weight="1">
 
         </RelativeLayout>
@@ -167,9 +169,10 @@
                         android:id="@+id/sendTextLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="2dp"
                         android:orientation="horizontal"
                         android:paddingTop="8dp"
+                        android:paddingBottom="2dp"
                         android:paddingHorizontal="8dp">
 
                         <EditText
