--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="305dp"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:paddingTop="16dp"
@@ -29,13 +29,20 @@
             android:paddingRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/assistantAvatarImageView"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:visibility="gone"/>
+            <LinearLayout
+                android:id="@+id/assistantAvatarBackgroundLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <ImageView
+                    android:id="@+id/assistantAvatarImageView"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:visibility="gone"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/assistantNameTextView"
@@ -73,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingHorizontal="4dp"
+            android:paddingHorizontal="12dp"
             android:visibility="gone"
             android:orientation="vertical">
 
@@ -97,7 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_marginVertical="10dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="28dp"
+                    android:layout_marginRight="24dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
                     <View
