--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -77,6 +77,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingHorizontal="12dp"
+                android:paddingBottom="8dp"
                 android:visibility="gone"
                 android:orientation="vertical">
             </androidx.recyclerview.widget.RecyclerView>
