--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".assistant.AssistantDrawerUI">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="305dp"
+        android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:visibility="gone"
             android:orientation="vertical">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/messagesRecyclerView"
@@ -77,7 +78,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingHorizontal="12dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="16dp"
                 android:visibility="gone"
                 android:orientation="vertical">
             </androidx.recyclerview.widget.RecyclerView>
