--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -8,12 +8,22 @@
     android:layout_height="wrap_content"
     tools:context=".assistant.AssistantDrawerUI">
 
-    <!-- TODO: Update blank fragment layout -->
+<LinearLayout
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.0">
     <LinearLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -257,6 +267,7 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+</LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
