--- a/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
+++ b/src/voicify-assistant-sdk/src/main/res/layout/fragment_assistant_drawer_u_i.xml
@@ -69,11 +69,16 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
-
-            <ImageView
-                android:id="@+id/closeAssistantImageView"
-                android:layout_width="25dp"
-                android:layout_height="25dp" />
+            <LinearLayout
+                android:id="@+id/closeAssistantBackgroundContainerLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/closeAssistantImageView"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/closeAssistantNoInternetImageView"
