--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,11 +15,9 @@
 
     <Button
         android:id="@+id/assistantMic"
+        android:paddingTop="40dp"
         android:layout_width="124dp"
         android:layout_height="139dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginTop="29dp"
         android:layout_marginEnd="11dp"
         android:layout_marginBottom="723dp"
@@ -34,4 +32,4 @@
 
     </TextView>
 
-</RelativeLayout>
+</LinearLayout>
