--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:id="@+id/relative_container">
@@ -15,12 +16,8 @@
 
     <Button
         android:id="@+id/assistantMic"
-        android:paddingTop="40dp"
         android:layout_width="124dp"
         android:layout_height="139dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="723dp"
         android:text="Click Me To Open Assistant" />
 
     <TextView
